make github link to open a new tab when clicked

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
           </li>
           {%- endfor -%}
 
-          <li><a href="https://github.com/geeksilva97">
+          <li><a href="https://github.com/geeksilva97" target="_blank">
               <svg class="svg-icon">
                 <use xlink:href="/assets/minima-social-icons.svg#github"></use>
               </svg> <span class="username">geeksilva97</span>
