--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -18,6 +18,8 @@
   };
 
   // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
+  if (window.location.hostname !== 'localhost') {
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  }
 </script>
