--- a/youtube.css
+++ b/youtube.css
@@ -6,7 +6,9 @@
 }
 
 body{
-	background: var(--bgl);
+	background-color: var(--bgl);
+	background-image: url(https://images.squarespace-cdn.com/content/v1/5a0e0437268b96c1d7102a8f/1587483376256-ETHOP345KH163WNO9KJI/MNG-KF-03.jpg?format=1500w);
+	background-size: cover;
 	display:flex;
 	flex-direction: column;
 	justify-content:center;
@@ -18,6 +20,7 @@ body{
 .title {
 	font-family: monospace;
 	font-size: 3rem;
+	text-shadow: 3px 4px 1px var(--bgl);
 }
 
 .vinyl{
