improve category page

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,17 +1,55 @@
-<h1>{{ page.title }}</h1>
-<!-- {{ page.category }} -->
-
 {% assign categories = site.posts | map: 'categories' | uniq | sort %}
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>{{ page.title }}</title>
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/category.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="{{ site.baseurl }}/favicon.ico">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }} RSS Feed" href="{{ site.baseurl }}/feed.xml">
+  <link rel="alternate" type="application/atom+xml" title="{{ site.title }} Atom Feed" href="{{ site.baseurl }}/atom.xml">
+  <link rel="canonical" href="{{ page.url | absolute_url }}">
+  <meta name="description" content="{{ page.description | default: site.description }}">
+  <meta name="keywords" content="{{ page.keywords | default: site.keywords | join: ', ' }}">
+  <meta name="author" content="{{ site.author.name }}">
+  <meta name="generator" content="Jekyll v{{ jekyll.version }}">
+  <meta property="og:title" content="{{ page.title }}">
+  <meta property="og:description" content="{{ page.description | default: site.description }}">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="{{ page.url | absolute_url }}">
+  <meta property="og:image" content="{{ site.baseurl }}/images/og-image.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="{{ page.title }}">
+  <meta name="twitter:description" content="{{ page.description | default: site.description }}">
+  <meta name="twitter:image" content="{{ site.baseurl }}/images/twitter-image.png">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/highlight.css">
+  <script src="{{ site.baseurl }}/js/highlight.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      hljs.highlightAll();
+    });
 
-{{ content }}
+  </script>
+</head>
 
-<ul>
-  {% for post in site.posts %}
-    {% if post.categories contains page.category %}
-      <li>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-        <small>{{ post.date | date: "%Y-%m-%d" }}</small>
-      </li>
-    {% endif %}
-  {% endfor %}
-</ul>
+<body>
+  <h1>{{ page.title }}</h1>
+
+  {{ content }}
+
+  <ul>
+    {% assign sorted_posts = site.posts | sort: 'date' %}
+    {% for post in sorted_posts %}
+      {% if post.categories contains page.category %}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+          <small>{{ post.date | date: "%Y-%m-%d" }}</small>
+        </li>
+      {% endif %}
+    {% endfor %}
+  </ul>
+</body>
+
+</html>
+
+
