--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -38,7 +38,7 @@
   {{ content }}
 
   <ul>
-    {% assign sorted_posts = site.posts | sort: 'date' %}
+    {% assign sorted_posts = site.posts | sort: 'chapter' %}
     {% for post in sorted_posts %}
       {% if post.categories contains page.category %}
         <li>
