doing rotations with CSS

--- a/interviews/shopify/grid-challenge/src/components/Grid.css
+++ b/interviews/shopify/grid-challenge/src/components/Grid.css
@@ -16,3 +16,19 @@
     }
   }
 }
+
+.roomba {
+  display: inline-block;
+
+  &.down {
+    transform: rotate(180deg);
+  }
+
+  &.left {
+    transform: rotate(-90deg);
+  }
+
+  &.right {
+    transform: rotate(90deg);
+  }
+}
