--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,25 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="index, follow">
   {%- seo -%}
 
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  {%- if page.date -%}
+    <meta itemprop="name" content="{{ page.title | escape }}">
+    <meta itemprop="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+    <meta itemprop="datePublished" content="{{ page.date | date_to_xmlschema }}">
+    {%- if page.last_modified_at -%}
+      <meta itemprop="dateModified" content="{{ page.last_modified_at | date_to_xmlschema }}">
+    {%- endif -%}
+    {%- assign word_count = page.content | strip_html | number_of_words -%}
+    <meta itemprop="wordCount" content="{{ word_count }}">
+    {%- if page.tags.size > 0 -%}
+      <meta itemprop="keywords" content="{{ page.tags | join: ',' }}">
+    {%- endif -%}
+    <meta property="article:section" content="{{ page.date | date: '%Y' }}">
+  {%- endif -%}
+
+  <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
